# internship-stuff

./: .gitattributes  .gitignore  README.md  SA_data_import.ipynb  SA_resnet.ipynb  deep_resnet.ipynb  hybrid_conv.ipynb  inception_resnet.ipynb  model_eval.ipynb  resnet.ipynb  test.ipynb
.devcontainer/: Dockerfile  devcontainer.json
datasets/: datasets.md
live-analysis/python_app/: README.md  api_test.py  app.py  app_console.py  dispAnalysis.py  pyproject.toml  requirements.txt  setup.cfg
live-analysis/python_app/Functions/: Collect.py  Request.py  Status.py
live-analysis/python_app/app/: analysis.py  thread.py
live-analysis/python_app/src/: app.py  app_console.py  app_console_SA copy.py  app_console_SA.py  app_console_pluto.py  app_console_ref_pluto.py  example.conf  main.py  parameters.conf  params.conf
live-analysis/python_app/src/Functions/: Collect.py  Plot.py  Plotter.py  Request.py  Tektronix.py  Utils.py  plutoSDR.py
live-analysis/python_app/src/app/: __main__.py  analysis.py  analysisMat.py  analysisSA.py  analysis_SA.py  analysis_pluto.py  analysis_ref_SA.py
notes/: activation_functions.md  documentation.md  target_removal.md
testing_grounds/: df_4point.csv  df_8point.csv  df_heatmap.csv  df_heatmap.py  funny.js  hosted_predictions.py  live_plt.py  plutoSDR.py  test.py  tflitetest.py
training_notebooks/: AANN.ipynb  AANN_eval.ipynb  AANN_results.npy  SA_inception_resnet.ipynb  SA_openres.ipynb  SA_openres_unknown.ipynb  SA_resnet.ipynb  SA_resnet_objectosphere.ipynb  SA_resnet_unknown.ipynb  hybrid_conv_imgen.ipynb  model_eval.ipynb
(+20 files in other folders)
