[build-system]
requires = [
	"setuptools>=42",
	"wheel",
	"certifi==2021.10.8",
	"charset-normalizer==2.0.9",
	"docutils==0.18.1",
	"idna==3.3",
	"numpy==1.21.4",
	"Pillow==8.4.0",
	"Pygments==2.10.0",
	"pypiwin32==223",
	"PyQt5-Qt5==5.15.2",
	"PyQt5-sip==4.19.19",
	"PySide2==5.15.2.1",
	"pywin32==302",
	"requests==2.26.0",
	"shiboken2==5.15.2.1",
	"urllib3==1.26.7",

]
build-backend = "setuptools.build_meta"